--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>for Rody</title>
+    <!-- <link rel="icon" href="favicon.svg" type="image/svg+xml"> -->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
