--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>for Rody</title>
-    <!-- <link rel="icon" href="favicon.svg" type="image/svg+xml"> -->
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="initial-scale=0.8, user-scalable=no">
+
+
+
 </head>
 
 <body>
@@ -26,7 +29,7 @@
             </div>
         </div>
 
-        <canvas id="gameCanvas" width="500" height="600"></canvas>
+        <canvas id="gameCanvas" width="500" height="550"></canvas>
         <div id="controls">
             <button id="jump-btn">Jump!</button>
         </div>
